backend: 3rd commit, auth + analyze
